Changelog for NICOS 2
=====================

**Release 2.1.0**

  - Introduce Measurable.duringMeasureHook and Measurable.save/doSave.

  - Added Experiment.scripts parameter that stores the code of the
    currently executed script.

  - Added easy access control using the requires() decorator.  Added
    AccessError and Session.checkAccess() APIs.

**Release 2.0.1**

  - In ImageStorage, make sure the data file isn't overwritten unless
    explicitly allowed.

**Release 2.0.0 (2012-01-11)**

  - Initial release.