@@ -3,13 +3,16 @@ Changelog for NICOS 2
 
 **Release 2.1.0**
 
-  - Introduce Measurable.duringMeasureHook and Measurable.save/doSave.
+  - Introduced Measurable.duringMeasureHook and Measurable.save/doSave.
 
   - Added Experiment.scripts parameter that stores the code of the
     currently executed script.
 
   - Added easy access control using the requires() decorator.  Added
     AccessError and Session.checkAccess() APIs.
+
+  - Added the three-parameter form of adjust() that allows to adjust to
+    some other than the current position.
 
 **Release 2.0.1**
 
